--- a/android/AndroidReadCVSFile/app/build.gradle
+++ b/android/AndroidReadCVSFile/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.androidplot:androidplot-core:1.5.1'
     compile 'com.pusher:pusher-java-client:1.5.0'
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
