--- a/android/AndroidReadCVSFile/app/src/main/AndroidManifest.xml
+++ b/android/AndroidReadCVSFile/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Plot"></activity>
+        <activity android:name=".SensorPlot"></activity>
     </application>
 
 </manifest>
